--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://javierzagal.github.io/T3Trucks",
+  "homepage": "https://javierzagal.github.io/Trucks",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
